methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:2: error: Missing closing brace `}' assumed here
def hunt() {
^SlugHunting:2: error: expected class or object definition
def hunt() {
^SlugHunting:53: error: expected class or object definition
def isFacingTrail():Boolean = {
^