methods.slug.SlugHunting.scala.code
def hunt() {
   
  while (isFacingTrail()) {
    
    avance();
    baisseBrosse();
    
  } 
  
  leveBrosse();
  
  gauche();
  
  if (isFacingTrail()) {
    
    avance();
    baisseBrosse();
    
  }
  
  leveBrosse();
  
  else {
    
    droite();
    recule();
    
  }
  
  droite();
  
  if (isFacingTrail()) {
    
    avance();
    baisseBrosse();
    
  }
  
  leveBrosse();
  
  else {
    
    recule();
    gauche();
    
  }
  
}



def isFacingTrail():Boolean = {
  
  if (estFaceMur()) {
    
    return false
    
  } 
  
  else {
  
  	avance();
  
  	if (getCouleurSol()== Color.green) {
    
    	recule();
    	
      return true
    
  	}
    
    else {
      
      recule();
      return false
      
    }
  
  }